tiny css tweak (avoid horizontal scroll in payee list)

--- a/src/global.css
+++ b/src/global.css
@@ -271,7 +271,7 @@ button {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 98%;
 }
 
 .select-button-right {
